--- a/dict/functions2ext.ini
+++ b/dict/functions2ext.ini
@@ -1975,3 +1975,28 @@ function[] = mssql_query
 function[] = mssql_result
 function[] = mssql_rows_affected
 function[] = mssql_select_db
+
+[memcache]
+function[] = memcache_connect
+function[] = memcache_pconnect
+function[] = memcache_add_server
+function[] = memcache_set_server_params
+function[] = memcache_set_failure_callback
+function[] = memcache_get_server_status
+function[] = memcache_get_version
+function[] = memcache_add
+function[] = memcache_set
+function[] = memcache_replace
+function[] = memcache_cas
+function[] = memcache_append
+function[] = memcache_prepend
+function[] = memcache_get
+function[] = memcache_get_stats
+function[] = memcache_get_extended_stats
+function[] = memcache_set_compress_threshold
+function[] = memcache_delete
+function[] = memcache_increment
+function[] = memcache_decrement
+function[] = memcache_close
+function[] = memcache_flush
+function[] = memcache_debug
