--- a/dict/poplib.ini
+++ b/dict/poplib.ini
@@ -99,3 +99,244 @@ classes[] = writeexcel_olewriter
 classes[] = writeexcel_workbook
 classes[] = writeexcel_workbookbig
 classes[] = writeexcel_worksheet
+[domit]
+classes[] = DOMIT_Utilities
+classes[] = DOMIT_Utilities
+classes[] = DOMIT_DOMException
+classes[] = DOMIT_NamedNodeMap_Attr
+classes[] = DOMIT_Parser
+classes[] = DOMIT_CDATASection
+classes[] = DOMIT_Utilities
+classes[] = DOMIT_Utilities
+classes[] = php_http_response
+classes[] = php_file_utilities
+classes[] = php_http_headers
+classes[] = php_http_connection
+classes[] = HTTPExceptions
+classes[] = php_http_client_generic
+classes[] = php_http_request
+classes[] = php_http_connector
+classes[] = HTTPExceptions
+classes[] = php_http_proxy
+classes[] = Timer
+classes[] = DOMIT_Utilities
+classes[] = php_file_utilities
+classes[] = DOMIT_Utilities
+classes[] = php_file_utilities
+classes[] = DOMIT_Utilities
+classes[] = DOMIT_cache
+classes[] = domit_doctor
+classes[] = domit_doctor
+classes[] = DOMIT_GetElementsByAttributePath
+classes[] = DOMIT_GetElementsByPath
+classes[] = DOMIT_TextNode
+classes[] = DOMIT_Utilities
+classes[] = DOMIT_Element
+classes[] = php_file_utilities
+classes[] = php_file_utilities
+classes[] = DOMIT_Utilities
+classes[] = DOMIT_Doctor
+[Excel]
+classes[] = OLERead
+classes[] = Spreadsheet_Excel_Reader
+[PHPCodeAnalyzer]
+classes[] = PHPCodeAnalyzer
+[phpmemcached]
+classes[] = MemCachedClient
+[simpletest-tools]
+classes[] = XmlReporter
+[TextParsers]
+classes[] = html2text
+classes[] = Markdown_Parser
+classes[] = SmartyPantsTypographer_Parser
+classes[] = SmartyPants_Parser
+classes[] = Spyc
+classes[] = Spyc
+classes[] = Spyc
+classes[] = YAMLNode
+classes[] = Textile
+[xslt-php4-php5]
+classes[] = xslt_arg_stream
+[PhoogleMap]
+classes[] = PhoogleMap
+[PhoogleMap]
+classes[] = sfFactoryException
+classes[] = sfForwardException
+classes[] = sfConfig
+classes[] = sfCommandArgumentsException
+classes[] = Swift_ClassLoader
+classes[] = Swift_Events_CommandEvent
+classes[] = Swift_Connection_Sendmail
+classes[] = Swift_LogContainer
+classes[] = Swift_Message_Encoder
+classes[] = Swift_Log
+[adodb]
+classes[] = ADODB_Active_DB
+classes[] = ADODB_Active_Table
+classes[] = ADODB_Active_Record
+classes[] = ADODB_DataDict
+classes[] = ADODB_Exception
+classes[] = ADODB_Cache_MemCache
+classes[] = ADODB_Pager
+classes[] = DB
+classes[] = adodb_perf
+classes[] = ADODB_BASE_RS
+classes[] = dbObject
+classes[] = dbTable
+classes[] = dbIndex
+classes[] = dbData
+classes[] = dbQuerySet
+classes[] = adoSchema
+classes[] = ADOFieldObject
+classes[] = ADODB_Cache_File
+classes[] = ADOConnection
+classes[] = ADOFetchObj
+classes[] = ADODB_Iterator_empty
+classes[] = ADORecordSet_empty
+classes[] = ADODB_Iterator
+classes[] = ADORecordSet
+classes[] = ADORecordSet_array
+classes[] = ADODB2_access
+classes[] = ADODB2_db2
+classes[] = ADODB2_firebird
+classes[] = ADODB2_generic
+classes[] = ADODB2_ibase
+classes[] = ADODB2_informix
+classes[] = ADODB2_mssql
+classes[] = ADODB2_mssqlnative
+classes[] = ADODB2_mysql
+classes[] = ADODB2_oci8
+classes[] = ADODB2_postgres
+classes[] = ADODB2_sapdb
+classes[] = ADODB2_sqlite
+classes[] = ADODB2_sybase
+classes[] = ADODB_access
+classes[] = ADORecordSet_access
+classes[] = ADODB_ado
+classes[] = ADORecordSet_ado
+classes[] = ADODB_ado_access
+classes[] = ADORecordSet_ado_access
+classes[] = ADODB_ado_mssql
+classes[] = ADORecordSet_ado_mssql
+classes[] = ADODB_ads
+classes[] = ADORecordSet_ads
+classes[] = ADODB_borland_ibase
+classes[] = ADORecordSet_borland_ibase
+classes[] = ADODB_csv
+classes[] = ADORecordset_csv
+classes[] = ADODB_db2
+classes[] = ADORecordSet_db2
+classes[] = ADODB_db2oci
+classes[] = ADORecordSet_db2oci
+classes[] = ADODB_fbsql
+classes[] = ADORecordSet_fbsql
+classes[] = ADODB_firebird
+classes[] = ADORecordSet_firebird
+classes[] = ADODB_ibase
+classes[] = ADORecordset_ibase
+classes[] = ADODB_informix
+classes[] = ADORecordset_informix
+classes[] = ADODB_informix72
+classes[] = ADORecordset_informix72
+classes[] = ADODB_ldap
+classes[] = ADORecordSet_ldap
+classes[] = ADODB_mssql
+classes[] = ADORecordset_mssql
+classes[] = ADORecordSet_array_mssql
+classes[] = ADODB_mssqlnative
+classes[] = ADORecordset_mssqlnative
+classes[] = ADORecordSet_array_mssqlnative
+classes[] = ADODB_mssqlpo
+classes[] = ADORecordset_mssqlpo
+classes[] = ADODB_mssql_n
+classes[] = ADORecordset_mssql_n
+classes[] = ADODB_mysql
+classes[] = ADORecordSet_mysql
+classes[] = ADORecordSet_ext_mysql
+classes[] = ADODB_mysqli
+classes[] = ADORecordSet_mysqli
+classes[] = ADORecordSet_array_mysqli
+classes[] = ADODB_mysqlt
+classes[] = ADORecordSet_mysqlt
+classes[] = ADORecordSet_ext_mysqlt
+classes[] = ADODB_netezza
+classes[] = ADORecordSet_netezza
+classes[] = ADODB_oci8
+classes[] = ADORecordset_oci8
+classes[] = ADORecordSet_ext_oci8
+classes[] = ADODB_oci805
+classes[] = ADORecordset_oci805
+classes[] = ADODB_oci8po
+classes[] = ADORecordset_oci8po
+classes[] = ADODB_odbc
+classes[] = ADORecordSet_odbc
+classes[] = ADODB_ODBC_DB2
+classes[] = ADORecordSet_odbc_db2
+classes[] = ADODB_odbc_mssql
+classes[] = ADORecordSet_odbc_mssql
+classes[] = ADODB_odbc_oracle
+classes[] = ADORecordSet_odbc_oracle
+classes[] = ADODB_odbtp
+classes[] = ADORecordSet_odbtp
+classes[] = ADORecordSet_odbtp_mssql
+classes[] = ADORecordSet_odbtp_access
+classes[] = ADORecordSet_odbtp_vfp
+classes[] = ADORecordSet_odbtp_oci8
+classes[] = ADORecordSet_odbtp_sybase
+classes[] = ADODB_odbtp_unicode
+classes[] = ADODB_oracle
+classes[] = ADORecordset_oracle
+classes[] = ADODB_pdo
+classes[] = ADODB_pdo_base
+classes[] = ADOPDOStatement
+classes[] = ADORecordSet_pdo
+classes[] = ADODB_pdo_mssql
+classes[] = ADODB_pdo_mysql
+classes[] = ADODB_pdo_oci
+classes[] = ADODB_pdo_pgsql
+classes[] = ADODB_pdo_sqlite
+classes[] = ADODB_postgres64
+classes[] = ADORecordSet_postgres64
+classes[] = ADODB_postgres7
+classes[] = ADORecordSet_postgres7
+classes[] = ADORecordSet_assoc_postgres7
+classes[] = ADODB_proxy
+classes[] = ADORecordset_proxy
+classes[] = ADODB_SAPDB
+classes[] = ADORecordSet_sapdb
+classes[] = ADODB_sqlanywhere
+classes[] = ADORecordSet_sqlanywhere
+classes[] = ADODB_sqlite
+classes[] = ADORecordset_sqlite
+classes[] = ADODB_sqlitepo
+classes[] = ADORecordset_sqlitepo
+classes[] = ADODB_sybase
+classes[] = ADORecordset_sybase
+classes[] = ADORecordSet_array_sybase
+classes[] = ADODB_sybase_ase
+classes[] = adorecordset_sybase_ase
+classes[] = ADODB_vfp
+classes[] = ADORecordSet_vfp
+classes[] = perf_db2
+classes[] = perf_informix
+classes[] = perf_mssql
+classes[] = perf_mssqlnative
+classes[] = perf_mysql
+classes[] = perf_oci8
+classes[] = perf_postgres
+classes[] = ADODB_Compress_Bzip2
+classes[] = ADODB_Compress_Gzip
+classes[] = ADODB_Encrypt_MCrypt
+classes[] = ADODB_Encrypt_MD5
+classes[] = ADODB_Encrypt_Secret
+classes[] = ADODB_Encrypt_SHA1
+classes[] = ADODB_Session
+classes[] = MD5Crypt
+classes[] = SHA1Crypt
+classes[] = Person
+classes[] = Child
+classes[] = Kid
+classes[] = Rugrat
+classes[] = Artist
+classes[] = Song
+classes[] = City
