more PHP extensions detected

--- a/dict/functions2ext.ini
+++ b/dict/functions2ext.ini
@@ -2000,3 +2000,300 @@ function[] = memcache_decrement
 function[] = memcache_close
 function[] = memcache_flush
 function[] = memcache_debug
+
+[mhash]
+function[] = mhash_count
+function[] = mhash_get_block_size
+function[] = mhash_get_hash_name
+function[] = mhash_keygen_s2k
+function[] = mhash
+
+[sybase]
+function[] = sybase_affected_rows
+function[] = sybase_close
+function[] = sybase_connect
+function[] = sybase_data_seek
+function[] = sybase_deadlock_retry_count
+function[] = sybase_fetch_array
+function[] = sybase_fetch_assoc
+function[] = sybase_fetch_field
+function[] = sybase_fetch_object
+function[] = sybase_fetch_row
+function[] = sybase_field_seek
+function[] = sybase_free_result
+function[] = sybase_get_last_message
+function[] = sybase_min_client_severity
+function[] = sybase_min_error_severity
+function[] = sybase_min_message_severity
+function[] = sybase_min_server_severity
+function[] = sybase_num_fields
+function[] = sybase_num_rows
+function[] = sybase_pconnect
+function[] = sybase_query
+function[] = sybase_result
+function[] = sybase_select_db
+function[] = sybase_set_message_handler
+function[] = sybase_unbuffered_query
+
+[dbase]
+function[] = dbase_add_record
+function[] = dbase_close
+function[] = dbase_create
+function[] = dbase_delete_record
+function[] = dbase_get_header_info
+function[] = dbase_get_record_with_names
+function[] = dbase_get_record
+function[] = dbase_numfields
+function[] = dbase_numrecords
+function[] = dbase_open
+function[] = dbase_pack
+function[] = dbase_replace_record
+
+[ming]
+function[] = ming_keypress
+function[] = ming_setcubicthreshold
+function[] = ming_setscale
+function[] = ming_setswfcompression
+function[] = ming_useconstants
+function[] = ming_useswfversion
+
+[fdf]
+function[] = fdf_add_doc_javascript
+function[] = fdf_add_template
+function[] = fdf_close
+function[] = fdf_create
+function[] = fdf_enum_values
+function[] = fdf_errno
+function[] = fdf_error
+function[] = fdf_get_ap
+function[] = fdf_get_attachment
+function[] = fdf_get_encoding
+function[] = fdf_get_file
+function[] = fdf_get_flags
+function[] = fdf_get_opt
+function[] = fdf_get_status
+function[] = fdf_get_value
+function[] = fdf_get_version
+function[] = fdf_header
+function[] = fdf_next_field_name
+function[] = fdf_open_string
+function[] = fdf_open
+function[] = fdf_remove_item
+function[] = fdf_save_string
+function[] = fdf_save
+function[] = fdf_set_ap
+function[] = fdf_set_encoding
+function[] = fdf_set_file
+function[] = fdf_set_flags
+function[] = fdf_set_javascript_action
+function[] = fdf_set_on_import_javascript
+function[] = fdf_set_opt
+function[] = fdf_set_status
+function[] = fdf_set_submit_form_action
+function[] = fdf_set_target_frame
+function[] = fdf_set_value
+function[] = fdf_set_version
+
+[msql]
+function[] = msql_affected_rows
+function[] = msql_close
+function[] = msql_connect
+function[] = msql_create_db
+function[] = msql_createdb
+function[] = msql_data_seek
+function[] = msql_db_query
+function[] = msql_dbname
+function[] = msql_drop_db
+function[] = msql_error
+function[] = msql_fetch_array
+function[] = msql_fetch_field
+function[] = msql_fetch_object
+function[] = msql_fetch_row
+function[] = msql_field_flags
+function[] = msql_field_len
+function[] = msql_field_name
+function[] = msql_field_seek
+function[] = msql_field_table
+function[] = msql_field_type
+function[] = msql_fieldflags
+function[] = msql_fieldlen
+function[] = msql_fieldname
+function[] = msql_fieldtable
+function[] = msql_fieldtype
+function[] = msql_free_result
+function[] = msql_list_dbs
+function[] = msql_list_fields
+function[] = msql_list_tables
+function[] = msql_num_fields
+function[] = msql_num_rows
+function[] = msql_numfields
+function[] = msql_numrows
+function[] = msql_pconnect
+function[] = msql_query
+function[] = msql_regcase
+function[] = msql_result
+function[] = msql_select_db
+function[] = msql_tablename
+function[] = msql
+
+[ncurses]
+function[] = ncurses_addch
+function[] = ncurses_addchnstr
+function[] = ncurses_addchstr
+function[] = ncurses_addnstr
+function[] = ncurses_addstr
+function[] = ncurses_assume_default_colors
+function[] = ncurses_attroff
+function[] = ncurses_attron
+function[] = ncurses_attrset
+function[] = ncurses_baudrate
+function[] = ncurses_beep
+function[] = ncurses_bkgd
+function[] = ncurses_bkgdset
+function[] = ncurses_border
+function[] = ncurses_bottom_panel
+function[] = ncurses_can_change_color
+function[] = ncurses_cbreak
+function[] = ncurses_clear
+function[] = ncurses_clrtobot
+function[] = ncurses_clrtoeol
+function[] = ncurses_color_content
+function[] = ncurses_color_set
+function[] = ncurses_curs_set
+function[] = ncurses_def_prog_mode
+function[] = ncurses_def_shell_mode
+function[] = ncurses_define_key
+function[] = ncurses_del_panel
+function[] = ncurses_delay_output
+function[] = ncurses_delch
+function[] = ncurses_deleteln
+function[] = ncurses_delwin
+function[] = ncurses_doupdate
+function[] = ncurses_echo
+function[] = ncurses_echochar
+function[] = ncurses_end
+function[] = ncurses_erase
+function[] = ncurses_erasechar
+function[] = ncurses_filter
+function[] = ncurses_flash
+function[] = ncurses_flushinp
+function[] = ncurses_getch
+function[] = ncurses_getmaxyx
+function[] = ncurses_getmouse
+function[] = ncurses_getyx
+function[] = ncurses_halfdelay
+function[] = ncurses_has_colors
+function[] = ncurses_has_ic
+function[] = ncurses_has_il
+function[] = ncurses_has_key
+function[] = ncurses_hide_panel
+function[] = ncurses_hline
+function[] = ncurses_inch
+function[] = ncurses_init_color
+function[] = ncurses_init_pair
+function[] = ncurses_init
+function[] = ncurses_insch
+function[] = ncurses_insdelln
+function[] = ncurses_insertln
+function[] = ncurses_insstr
+function[] = ncurses_instr
+function[] = ncurses_isendwin
+function[] = ncurses_keyok
+function[] = ncurses_keypad
+function[] = ncurses_killchar
+function[] = ncurses_longname
+function[] = ncurses_meta
+function[] = ncurses_mouse_trafo
+function[] = ncurses_mouseinterval
+function[] = ncurses_mousemask
+function[] = ncurses_move_panel
+function[] = ncurses_move
+function[] = ncurses_mvaddch
+function[] = ncurses_mvaddchnstr
+function[] = ncurses_mvaddchstr
+function[] = ncurses_mvaddnstr
+function[] = ncurses_mvaddstr
+function[] = ncurses_mvcur
+function[] = ncurses_mvdelch
+function[] = ncurses_mvgetch
+function[] = ncurses_mvhline
+function[] = ncurses_mvinch
+function[] = ncurses_mvvline
+function[] = ncurses_mvwaddstr
+function[] = ncurses_napms
+function[] = ncurses_new_panel
+function[] = ncurses_newpad
+function[] = ncurses_newwin
+function[] = ncurses_nl
+function[] = ncurses_nocbreak
+function[] = ncurses_noecho
+function[] = ncurses_nonl
+function[] = ncurses_noqiflush
+function[] = ncurses_noraw
+function[] = ncurses_pair_content
+function[] = ncurses_panel_above
+function[] = ncurses_panel_below
+function[] = ncurses_panel_window
+function[] = ncurses_pnoutrefresh
+function[] = ncurses_prefresh
+function[] = ncurses_putp
+function[] = ncurses_qiflush
+function[] = ncurses_raw
+function[] = ncurses_refresh
+function[] = ncurses_replace_panel
+function[] = ncurses_reset_prog_mode
+function[] = ncurses_reset_shell_mode
+function[] = ncurses_resetty
+function[] = ncurses_savetty
+function[] = ncurses_scr_dump
+function[] = ncurses_scr_init
+function[] = ncurses_scr_restore
+function[] = ncurses_scr_set
+function[] = ncurses_scrl
+function[] = ncurses_show_panel
+function[] = ncurses_slk_attr
+function[] = ncurses_slk_attroff
+function[] = ncurses_slk_attron
+function[] = ncurses_slk_attrset
+function[] = ncurses_slk_clear
+function[] = ncurses_slk_color
+function[] = ncurses_slk_init
+function[] = ncurses_slk_noutrefresh
+function[] = ncurses_slk_refresh
+function[] = ncurses_slk_restore
+function[] = ncurses_slk_set
+function[] = ncurses_slk_touch
+function[] = ncurses_standend
+function[] = ncurses_standout
+function[] = ncurses_start_color
+function[] = ncurses_termattrs
+function[] = ncurses_termname
+function[] = ncurses_timeout
+function[] = ncurses_top_panel
+function[] = ncurses_typeahead
+function[] = ncurses_ungetch
+function[] = ncurses_ungetmouse
+function[] = ncurses_update_panels
+function[] = ncurses_use_default_colors
+function[] = ncurses_use_env
+function[] = ncurses_use_extended_names
+function[] = ncurses_vidattr
+function[] = ncurses_vline
+function[] = ncurses_waddch
+function[] = ncurses_waddstr
+function[] = ncurses_wattroff
+function[] = ncurses_wattron
+function[] = ncurses_wattrset
+function[] = ncurses_wborder
+function[] = ncurses_wclear
+function[] = ncurses_wcolor_set
+function[] = ncurses_werase
+function[] = ncurses_wgetch
+function[] = ncurses_whline
+function[] = ncurses_wmouse_trafo
+function[] = ncurses_wmove
+function[] = ncurses_wnoutrefresh
+function[] = ncurses_wrefresh
+function[] = ncurses_wstandend
+function[] = ncurses_wstandout
+function[] = ncurses_wvline
