classes new in PHP 5.3

--- a/dict/class2ext.ini
+++ b/dict/class2ext.ini
@@ -156,6 +156,7 @@ classes[] = ZipArchive
 [tidy]
 classes[] = TidyNode
 classes[] = Tidy
+
 [com]
 classes[] = com_exception
 classes[] = com_safearray_proxy
@@ -163,3 +164,23 @@ classes[] = variant
 classes[] = com
 classes[] = dotnet
 classes[] = COMPersistHelper
+
+[sqlite3]
+classes[] = SQLite3
+classes[] = SQLite3Stmt
+classes[] = SQLite3Result
+
+[phar]
+classes[] = Phar
+classes[] = PharData
+classes[] = PharFileInfo
+classes[] = PharException
+
+[intl]
+classes[] = Collator
+classes[] = NumberFormatter
+classes[] = Locale
+classes[] = Normalizer
+classes[] = MessageFormatter
+classes[] = IntlDateFormatter
+classes[] = ResourceBundle
