--- a/dict/functions2ext.ini
+++ b/dict/functions2ext.ini
@@ -2297,3 +2297,50 @@ function[] = ncurses_wrefresh
 function[] = ncurses_wstandend
 function[] = ncurses_wstandout
 function[] = ncurses_wvline
+
+[enchant]
+function[] = enchant_broker_describe
+function[] = enchant_broker_dict_exists
+function[] = enchant_broker_free_dict
+function[] = enchant_broker_free
+function[] = enchant_broker_get_error
+function[] = enchant_broker_init
+function[] = enchant_broker_list_dicts
+function[] = enchant_broker_request_dict
+function[] = enchant_broker_request_pwl_dict
+function[] = enchant_broker_set_ordering
+function[] = enchant_dict_add_to_personal
+function[] = enchant_dict_add_to_session
+function[] = enchant_dict_check
+function[] = enchant_dict_describe
+function[] = enchant_dict_get_error
+function[] = enchant_dict_is_in_session
+function[] = enchant_dict_quick_check
+function[] = enchant_dict_store_replacement
+function[] = enchant_dict_suggest
+
+[fileinfo]
+function[] = finfo_buffer
+function[] = finfo_close
+function[] = finfo_file
+function[] = finfo_open
+function[] = finfo_set_flags
+function[] = mime_content_type
+
+[intl]
+function[] = grapheme_extract
+function[] = grapheme_stripos
+function[] = grapheme_stristr
+function[] = grapheme_strlen
+function[] = grapheme_strpos
+function[] = grapheme_strripos
+function[] = grapheme_strrpos
+function[] = grapheme_strstr
+function[] = grapheme_substr
+function[] = idn_to_ascii
+function[] = idn_to_unicode
+function[] = idn_to_utf8
+function[] = intl_error_name
+function[] = intl_get_error_code
+function[] = intl_get_error_message
+function[] = intl_is_failure
