new constants in PHP 5.3

--- a/dict/constant2ext.ini
+++ b/dict/constant2ext.ini
@@ -1650,3 +1650,34 @@ constant[] = "FBSQL_STARTING"
 constant[] = "FBSQL_STOPPED"
 constant[] = "FBSQL_STOPPING"
 constant[] = "FBSQL_UNKNOWN"
+
+[sqlite3]
+constant[] = SQLITE3_ASSOC
+constant[] = SQLITE3_BLOB
+constant[] = SQLITE3_BOTH
+constant[] = SQLITE3_FLOAT
+constant[] = SQLITE3_INTEGER
+constant[] = SQLITE3_NULL
+constant[] = SQLITE3_NUM
+constant[] = SQLITE3_OPEN_CREATE
+constant[] = SQLITE3_OPEN_READONLY
+constant[] = SQLITE3_OPEN_READWRITE
+constant[] = SQLITE3_TEXT
+
+[intl]
+constant[] = INTL_MAX_LOCALE_LEN
+constant[] = IDNA_DEFAULT
+constant[] = IDNA_ALLOW_UNASSIGNED
+constant[] = IDNA_USE_STD3_RULES
+
+[fileinfo]
+constant[] = FILEINFO_COMPRESS
+constant[] = FILEINFO_CONTINUE
+constant[] = FILEINFO_DEVICES
+constant[] = FILEINFO_MIME
+constant[] = FILEINFO_MIME_ENCODING
+constant[] = FILEINFO_MIME_TYPE
+constant[] = FILEINFO_NONE
+constant[] = FILEINFO_PRESERVE_ATIME
+constant[] = FILEINFO_RAW
+constant[] = FILEINFO_SYMLINK
