removed double section, upped presentation

--- a/dict/class2ext.ini
+++ b/dict/class2ext.ini
@@ -134,28 +134,26 @@ classes[] = soapserver
 classes[] = soapfault
 classes[] = soapparam
 classes[] = soapheader
+
 [sqlite]
 classes[] = sqlitedatabase
 classes[] = sqliteresult
 classes[] = sqliteunbuffered
 classes[] = sqliteexception
+
 [xmlreader]
 classes[] = xmlreader
 classes[] = xmlwriter
+
 [xslt]
 classes[] = xsltprocessor
+
 [zip]
 classes[] = ziparchive
-[phar]
-classes[] = pharexception
-classes[] = phar
-classes[] = phardata
-classes[] = pharfileinfo
-[zip]
-classes[] = ZipArchive
+
 [tidy]
-classes[] = TidyNode
-classes[] = Tidy
+classes[] = tidynode
+classes[] = tidy
 
 [com]
 classes[] = com_exception
@@ -163,24 +161,24 @@ classes[] = com_safearray_proxy
 classes[] = variant
 classes[] = com
 classes[] = dotnet
-classes[] = COMPersistHelper
+classes[] = compersisthelper
 
 [sqlite3]
-classes[] = SQLite3
-classes[] = SQLite3Stmt
-classes[] = SQLite3Result
+classes[] = sqlite3
+classes[] = sqlite3stmt
+classes[] = sqlite3result
 
 [phar]
-classes[] = Phar
-classes[] = PharData
-classes[] = PharFileInfo
-classes[] = PharException
+classes[] = phar
+classes[] = phardata
+classes[] = pharfileinfo
+classes[] = pharexception
 
 [intl]
-classes[] = Collator
-classes[] = NumberFormatter
-classes[] = Locale
-classes[] = Normalizer
-classes[] = MessageFormatter
-classes[] = IntlDateFormatter
-classes[] = ResourceBundle
+classes[] = collator
+classes[] = numberformatter
+classes[] = locale
+classes[] = normalizer
+classes[] = messageformatter
+classes[] = intldateformatter
+classes[] = resourcebundle
