new libraries, rewamped presentation, first try at function detection (for getid3)

--- a/dict/poplib.ini
+++ b/dict/poplib.ini
@@ -1,96 +1,100 @@
 [fpdf]
 classes[] = FPDF
+
 [fpdfi]
 classes[] = FPDF_TPL
 classes[] = FPDI
+
 [tcpdf]
 classes[] = TCPDF
 classes[] = TCPDF2DBarcode
 classes[] = TCPDFBarcode
 classes[] = QRcode
+
 [php-ofc-library]
-classes[] = anchor;
-classes[] = area;
-classes[] = area_hollow;
-classes[] = area_line;
-classes[] = bar;
-classes[] = bar;
-classes[] = bar_3d;
-classes[] = bar_3d_value;
-classes[] = bar_base;
-classes[] = bar_cylinder;
-classes[] = bar_cylinder_outline;
-classes[] = bar_dome;
-classes[] = bar_filled;
-classes[] = bar_filled_value;
-classes[] = bar_glass;
-classes[] = bar_on_show;
-classes[] = bar_round;
-classes[] = bar_round3d;
-classes[] = bar_rounded_glass;
-classes[] = bar_sketch;
-classes[] = bar_stack;
-classes[] = bar_stack_key;
-classes[] = bar_stack_value;
-classes[] = bar_value;
-classes[] = bar_value;
-classes[] = base_pie_animation;
-classes[] = bow;
-classes[] = candle;
-classes[] = candle_value;
-classes[] = dot;
-classes[] = dot_base;
-classes[] = dot_value;
-classes[] = hbar;
-classes[] = hbar_stack;
-classes[] = hbar_stack_value;
-classes[] = hbar_value;
-classes[] = hollow_dot;
-classes[] = legend;
-classes[] = line;
-classes[] = line_base;
-classes[] = line_dot;
-classes[] = line_hollow;
-classes[] = line_on_show;
-classes[] = line_style;
-classes[] = ofc_arrow;
-classes[] = ofc_menu;
-classes[] = ofc_menu_item;
-classes[] = ofc_menu_item_camera;
-classes[] = ofc_tag;
-classes[] = ofc_tags;
-classes[] = open_flash_chart;
-classes[] = pie;
-classes[] = pie_bounce;
-classes[] = pie_fade;
-classes[] = pie_value;
-classes[] = radar_axis;
-classes[] = radar_axis_labels;
-classes[] = radar_spoke_labels;
-classes[] = s_box;
-classes[] = s_hollow_dot;
-classes[] = s_star;
-classes[] = scatter;
-classes[] = scatter_line;
-classes[] = scatter_value;
-classes[] = Services_JSON;
-classes[] = Services_JSON_Error;
-classes[] = shape;
-classes[] = shape_point;
-classes[] = solid_dot;
-classes[] = star;
-classes[] = title;
-classes[] = tooltip;
-classes[] = x_axis;
-classes[] = x_axis_label;
-classes[] = x_axis_labels;
-classes[] = x_legend;
-classes[] = y_axis;
-classes[] = y_axis_base;
-classes[] = y_axis_label;
-classes[] = y_axis_labels;
-classes[] = y_axis_right;
-classes[] = y_legend;
+classes[] = anchor
+classes[] = area
+classes[] = area_hollow
+classes[] = area_line
+classes[] = bar
+classes[] = bar
+classes[] = bar_3d
+classes[] = bar_3d_value
+classes[] = bar_base
+classes[] = bar_cylinder
+classes[] = bar_cylinder_outline
+classes[] = bar_dome
+classes[] = bar_filled
+classes[] = bar_filled_value
+classes[] = bar_glass
+classes[] = bar_on_show
+classes[] = bar_round
+classes[] = bar_round3d
+classes[] = bar_rounded_glass
+classes[] = bar_sketch
+classes[] = bar_stack
+classes[] = bar_stack_key
+classes[] = bar_stack_value
+classes[] = bar_value
+classes[] = bar_value
+classes[] = base_pie_animation
+classes[] = bow
+classes[] = candle
+classes[] = candle_value
+classes[] = dot
+classes[] = dot_base
+classes[] = dot_value
+classes[] = hbar
+classes[] = hbar_stack
+classes[] = hbar_stack_value
+classes[] = hbar_value
+classes[] = hollow_dot
+classes[] = legend
+classes[] = line
+classes[] = line_base
+classes[] = line_dot
+classes[] = line_hollow
+classes[] = line_on_show
+classes[] = line_style
+classes[] = ofc_arrow
+classes[] = ofc_menu
+classes[] = ofc_menu_item
+classes[] = ofc_menu_item_camera
+classes[] = ofc_tag
+classes[] = ofc_tags
+classes[] = open_flash_chart
+classes[] = pie
+classes[] = pie_bounce
+classes[] = pie_fade
+classes[] = pie_value
+classes[] = radar_axis
+classes[] = radar_axis_labels
+classes[] = radar_spoke_labels
+classes[] = s_box
+classes[] = s_hollow_dot
+classes[] = s_star
+classes[] = scatter
+classes[] = scatter_line
+classes[] = scatter_value
+classes[] = Services_JSON
+classes[] = Services_JSON_Error
+classes[] = shape
+classes[] = shape_point
+classes[] = solid_dot
+classes[] = star
+classes[] = title
+classes[] = tooltip
+classes[] = x_axis
+classes[] = x_axis_label
+classes[] = x_axis_labels
+classes[] = x_legend
+classes[] = y_axis
+classes[] = y_axis_base
+classes[] = y_axis_label
+classes[] = y_axis_labels
+classes[] = y_axis_right
+classes[] = y_legend
+
 [writeexcel]
 classes[] = writeexcel_biffwriter
 classes[] = writeexcel_format
@@ -99,6 +103,7 @@ classes[] = writeexcel_olewriter
 classes[] = writeexcel_workbook
 classes[] = writeexcel_workbookbig
 classes[] = writeexcel_worksheet
+
 [domit]
 classes[] = DOMIT_Utilities
 classes[] = DOMIT_Utilities
@@ -136,15 +141,20 @@ classes[] = php_file_utilities
 classes[] = php_file_utilities
 classes[] = DOMIT_Utilities
 classes[] = DOMIT_Doctor
+
 [Excel]
 classes[] = OLERead
 classes[] = Spreadsheet_Excel_Reader
+
 [PHPCodeAnalyzer]
 classes[] = PHPCodeAnalyzer
+
 [phpmemcached]
 classes[] = MemCachedClient
+
 [simpletest-tools]
 classes[] = XmlReporter
+
 [TextParsers]
 classes[] = html2text
 classes[] = Markdown_Parser
@@ -155,10 +165,13 @@ classes[] = Spyc
 classes[] = Spyc
 classes[] = YAMLNode
 classes[] = Textile
+
 [xslt-php4-php5]
 classes[] = xslt_arg_stream
+
 [PhoogleMap]
 classes[] = PhoogleMap
+
 [PhoogleMap]
 classes[] = sfFactoryException
 classes[] = sfForwardException
@@ -170,6 +183,7 @@ classes[] = Swift_Connection_Sendmail
 classes[] = Swift_LogContainer
 classes[] = Swift_Message_Encoder
 classes[] = Swift_Log
+
 [adodb]
 classes[] = ADODB_Active_DB
 classes[] = ADODB_Active_Table
@@ -333,3 +347,191 @@ classes[] = ADODB_Session
 classes[] = MD5Crypt
 classes[] = SHA1Crypt
 
+[getID3]
+functions[] = ID3v2FrameProcessing
+functions[] = PrintHexBytes
+functions[] = PrintTextBytes
+functions[] = FixTextFields
+functions[] = table_var_dump
+functions[] = string_var_dump
+functions[] = fileextension
+functions[] = RemoveAccents
+functions[] = MoreNaturalSort
+functions[] = trunc
+functions[] = CastAsInt
+functions[] = getmicrotime
+functions[] = DecimalBinary2Float
+functions[] = NormalizeBinaryPoint
+functions[] = Float2BinaryDecimal
+functions[] = Float2String
+functions[] = LittleEndian2Float
+functions[] = BigEndian2Float
+functions[] = BigEndian2Int
+functions[] = LittleEndian2Int
+functions[] = BigEndian2Bin
+functions[] = BigEndian2String
+functions[] = Dec2Bin
+functions[] = Bin2Dec
+functions[] = LittleEndian2String
+functions[] = Bool2IntString
+functions[] = IntString2Bool
+functions[] = DeUnSynchronise
+functions[] = Unsynchronise
+functions[] = is_hash
+functions[] = array_join_merge
+functions[] = RoughTranslateUnicodeToASCII
+functions[] = GetURLImageSize
+functions[] = GetDataImageSize
+functions[] = getID3v1Filepointer
+functions[] = getID3v2Filepointer
+functions[] = ParseID3v2GenreString
+functions[] = ArrayOfGenres
+functions[] = LookupGenre
+functions[] = LookupCurrency
+functions[] = LanguageLookup
+functions[] = ETCOEventLookup
+functions[] = SYTLContentTypeLookup
+functions[] = APICPictureTypeLookup
+functions[] = COMRReceivedAsLookup
+functions[] = RVA2ChannelTypeLookup
+functions[] = FrameNameLongLookup
+functions[] = RGADnameLookup
+functions[] = RGADoriginatorLookup
+functions[] = RGADadjustmentLookup
+functions[] = RGADgainString
+functions[] = RIFFwFormatTagLookup
+functions[] = RIFFfourccLookup
+functions[] = MPEGvideoFramerateLookup
+functions[] = MPEGvideoAspectRatioLookup
+functions[] = MPEGvideoAspectRatioTextLook
+functions[] = ID3v2FrameFlagsLookupTagAlte
+functions[] = ID3v2FrameFlagsLookupFileAlt
+functions[] = IsValidETCOevent
+functions[] = IsValidSYLTtype
+functions[] = IsValidRVA2channeltype
+functions[] = IsValidAPICpicturetype
+functions[] = IsValidAPICimageformat
+functions[] = IsValidCOMRreceivedas
+functions[] = IsValidRGADname
+functions[] = IsValidRGADoriginator
+functions[] = IsValidMIMEstring
+functions[] = IsWithinBitRange
+functions[] = IsValidTextEncoding
+functions[] = TextEncodingLookup
+functions[] = IsValidID3v2FrameName
+functions[] = IsValidEmail
+functions[] = IsValidURL
+functions[] = IsANumber
+functions[] = IsValidDateStampString
+functions[] = IsValidPriceString
+functions[] = ID3v2HeaderLength
+functions[] = GeneralMIDIinstrumentLookup
+functions[] = GeneralMIDIpercussionLookup
+functions[] = getLyrics3Filepointer
+functions[] = Lyrics3Timestamp2Seconds
+functions[] = Lyrics3LyricsTimestampParse
+functions[] = getMIDIHeaderFilepointer
+functions[] = getID3
+functions[] = decodeMPEGaudioHeader
+functions[] = getOnlyMPEGaudioInfo
+functions[] = getMP3header
+functions[] = getMP3headerFilepointer
+functions[] = MPEGaudioVersionLookup
+functions[] = MPEGaudioLayerLookup
+functions[] = MPEGaudioBitrateLookup
+functions[] = MPEGaudioFrequencyLookup
+functions[] = MPEGaudioChannelModeLookup
+functions[] = MPEGaudioModeExtensionLookup
+functions[] = MPEGaudioEmphasisLookup
+functions[] = MPEGaudioCRCLookup
+functions[] = MPEGaudioHeaderValid
+functions[] = getMPEGHeaderFilepointer
+functions[] = ParseOggPageHeader
+functions[] = getOggHeaderFilepointer
+functions[] = GetAllMP3info
+functions[] = ParseAsThisFormat
+functions[] = GenerateID3v2TagFlags
+functions[] = GenerateID3v2FrameFlags
+functions[] = GenerateID3v2FrameData
+functions[] = ID3v2FrameIsAllowed
+functions[] = GenerateID3v2Tag
+functions[] = WriteID3v2
+functions[] = RemoveID3v2
+functions[] = GenerateID3v1Tag
+functions[] = WriteID3v1
+functions[] = RemoveID3v1
+functions[] = ParseRIFF
+functions[] = getRIFFHeaderFilepointer
+functions[] = gd_version
+functions[] = errorimage
+functions[] = getZipHeaderFilepointer
+
+[minify]
+classes[] = FirePHP
+classes[] = HTTP_ConditionalGet
+classes[] = HTTP_Encoder
+classes[] = JSMin
+classes[] = JSMin_UnterminatedStringException
+classes[] = JSMin_UnterminatedCommentException
+classes[] = JSMin_UnterminatedRegExpException
+classes[] = JSMinPlus
+classes[] = JSParser
+classes[] = JSCompilerContext
+classes[] = JSNode
+classes[] = JSTokenizer
+classes[] = JSToken
+classes[] = Minify
+classes[] = Minify_Build
+classes[] = Minify_Cache_APC
+classes[] = Minify_Cache_File
+classes[] = Minify_Cache_Memcache
+classes[] = Minify_CommentPreserver
+classes[] = Minify_Controller_Base
+classes[] = Minify_Controller_Files
+classes[] = Minify_Controller_Groups
+classes[] = Minify_Controller_MinApp
+classes[] = Minify_Controller_Page
+classes[] = Minify_Controller_Version1
+classes[] = Minify_CSS
+classes[] = Minify_CSS_Compressor
+classes[] = Minify_CSS_UriRewriter
+classes[] = Minify_HTML
+classes[] = Minify_ImportProcessor
+classes[] = Minify_Lines
+classes[] = Minify_Logger
+classes[] = Minify_Packer
+classes[] = Minify_Source
+classes[] = Minify_YUICompressor
+classes[] = Solar_Dir
+functions[] = Minify_groupUri
+functions[] = Minify_groupsMtime
+functions[] = _Minify_getBuild
+functions[] = send_slowly
+functions[] = get_content
+functions[] = test_environment
+functions[] = test_HTTP_ConditionalGet
+functions[] = test_HTTP_Encoder
+functions[] = _gzdecode
+functions[] = _phpman_gzdecode
+functions[] = test_JSMin
+functions[] = test_JSMin_exception
+functions[] = test_JSMinPlus
+functions[] = test_Minify
+functions[] = test_Minify_Build
+functions[] = test_Minify_Cache_APC
+functions[] = test_Minify_Cache_File
+functions[] = test_Minify_Cache_Memcache
+functions[] = test_Minify_CommentPreserver
+functions[] = _test_MCP_processor
+functions[] = test_CSS
+functions[] = test_Minify_CSS_UriRewriter
+functions[] = test_HTML
+functions[] = test_Minify_ImportProcessor
+functions[] = test_Lines
+functions[] = assertTrue
+
+[firePHPCore]
+classes[] = FirePHP
+
+[jsonwrapper]
+classes[] = Services_JSON
