--- a/dict/poplib.ini
+++ b/dict/poplib.ini
@@ -1055,3 +1055,99 @@ classes[] = PHPT_Controller_SimpleTest
 classes[] = PHPT_Reporter_SimpleTest
 classes[] = RowTimer
 classes[] = XmlRpc_Freshmeat
+
+[smarty]
+classes[] = _smarty_code
+classes[] = _smarty_doublequoted
+classes[] = _smarty_dq_content
+classes[] = _smarty_linebreak
+classes[] = _smarty_parsetree
+classes[] = _smarty_tag
+classes[] = _smarty_template_buffer
+classes[] = _smarty_text
+classes[] = Person
+classes[] = Smarty_Data
+classes[] = Smarty_Internal_CacheResource_File
+classes[] = Smarty_Internal_Compile_Append
+classes[] = Smarty_Internal_Compile_Assign
+classes[] = Smarty_Internal_Compile_Block
+classes[] = Smarty_Internal_Compile_Blockclose
+classes[] = Smarty_Internal_Compile_Break
+classes[] = Smarty_Internal_Compile_Call
+classes[] = Smarty_Internal_Compile_Capture
+classes[] = Smarty_Internal_Compile_CaptureClose
+classes[] = Smarty_Internal_Compile_Config_Load
+classes[] = Smarty_Internal_Compile_Continue
+classes[] = Smarty_Internal_Compile_Debug
+classes[] = Smarty_Internal_Compile_Else
+classes[] = Smarty_Internal_Compile_Elseif
+classes[] = Smarty_Internal_Compile_Eval
+classes[] = Smarty_Internal_Compile_Extends
+classes[] = Smarty_Internal_Compile_For
+classes[] = Smarty_Internal_Compile_Forclose
+classes[] = Smarty_Internal_Compile_Foreach
+classes[] = Smarty_Internal_Compile_Foreachclose
+classes[] = Smarty_Internal_Compile_Foreachelse
+classes[] = Smarty_Internal_Compile_Forelse
+classes[] = Smarty_Internal_Compile_Function
+classes[] = Smarty_Internal_Compile_Functionclose
+classes[] = Smarty_Internal_Compile_If
+classes[] = Smarty_Internal_Compile_Ifclose
+classes[] = Smarty_Internal_Compile_Include_Php
+classes[] = Smarty_Internal_Compile_Include
+classes[] = Smarty_Internal_Compile_Insert
+classes[] = Smarty_Internal_Compile_Ldelim
+classes[] = Smarty_Internal_Compile_Nocache
+classes[] = Smarty_Internal_Compile_Nocacheclose
+classes[] = Smarty_Internal_Compile_Private_Block_Plugin
+classes[] = Smarty_Internal_Compile_Private_Function_Plugin
+classes[] = Smarty_Internal_Compile_Private_Modifier
+classes[] = Smarty_Internal_Compile_Private_Object_Block_Function
+classes[] = Smarty_Internal_Compile_Private_Object_Function
+classes[] = Smarty_Internal_Compile_Private_Print_Expression
+classes[] = Smarty_Internal_Compile_Private_Registered_Block
+classes[] = Smarty_Internal_Compile_Private_Registered_Function
+classes[] = Smarty_Internal_Compile_Private_Special_Variable
+classes[] = Smarty_Internal_Compile_Rdelim
+classes[] = Smarty_Internal_Compile_Section
+classes[] = Smarty_Internal_Compile_Sectionclose
+classes[] = Smarty_Internal_Compile_Sectionelse
+classes[] = Smarty_Internal_Compile_While
+classes[] = Smarty_Internal_Compile_Whileclose
+classes[] = Smarty_Internal_CompileBase
+classes[] = Smarty_Internal_Config_File_Compiler
+classes[] = Smarty_Internal_Config
+classes[] = Smarty_Internal_Configfilelexer
+classes[] = Smarty_Internal_Configfileparser
+classes[] = Smarty_Internal_Data
+classes[] = Smarty_Internal_Debug
+classes[] = Smarty_Internal_Filter_Handler
+classes[] = Smarty_Internal_Filter
+classes[] = Smarty_Internal_Function_Call_Handler
+classes[] = Smarty_Internal_Nocache_Insert
+classes[] = Smarty_Internal_Register
+classes[] = Smarty_Internal_Resource_Eval
+classes[] = Smarty_Internal_Resource_Extends
+classes[] = Smarty_Internal_Resource_File
+classes[] = Smarty_Internal_Resource_PHP
+classes[] = Smarty_Internal_Resource_Registered
+classes[] = Smarty_Internal_Resource_Stream
+classes[] = Smarty_Internal_Resource_String
+classes[] = Smarty_Internal_SmartyTemplateCompiler
+classes[] = Smarty_Internal_Template
+classes[] = Smarty_Internal_TemplateCompilerBase
+classes[] = Smarty_Internal_Templatelexer
+classes[] = Smarty_Internal_Templateparser
+classes[] = Smarty_Internal_Utility
+classes[] = Smarty_Internal_Wrapper
+classes[] = Smarty_Internal_Write_File
+classes[] = Smarty_Security
+classes[] = Smarty_Variable
+classes[] = Smarty
+classes[] = SmartyCompilerException
+classes[] = SmartyException
+classes[] = TP_yyStackEntry
+classes[] = TP_yyToken
+classes[] = TPC_yyStackEntry
+classes[] = TPC_yyToken
+classes[] = Undefined_Smarty_Variable
